--- a/app/client/style.css
+++ b/app/client/style.css
@@ -1,12 +1,16 @@
 .landing-background {
   background: url('https://files.catbox.moe/v62COc.jpg') no-repeat center center fixed;
   background-size: cover;
-  height: 200px;
-  padding-top: -50px;
+  height: 50em;
+  background-position: bottom center;
+
 }
 
+.ui.center.aligned.container h1 {
+  color: white;
+}
 
-.bottom-footer{
+.bottom-footer {
   background-color: #4286f4;
   margin: 0px;
   border-radius: 0px;
@@ -15,7 +19,22 @@
   padding-right: 5em;
 }
 
-.blue-background{
+.blue-background {
   background-color: #4286f4;
-  color: #ffffff;
+  color: black;
+}
+
+.gray-background {
+  background-color: gray;
+  color: black;
+}
+
+.yellow-background {
+  background-color: yellow;
+  color: black;
+}
+
+.gray-background-line {
+  background-color:yellow;
+  height: 0.25em;
 }
