--- a/app/client/style.css
+++ b/app/client/style.css
@@ -5,6 +5,25 @@
   background-position: bottom center;
 
 }
+.profile-cover-mockup {
+  background: url('https://www.setaswall.com/wp-content/uploads/2017/05/Sakura-Wallpaper-10-1920x1080-768x432.jpg') no-repeat center center fixed;
+  background-size: cover;
+  height: 20em;
+  background-position: bottom center;
+
+}
+
+
+.profile-graph-mockup {
+  background: url('http://resources.renishaw.com/download.aspx?lang=en&data=75769&btn=1') no-repeat;
+  background-size: cover;
+  height: 20em;
+  background-position: bottom center;
+  margin-top: 10px;
+  padding-top: 10px;
+
+}
+
 
 .ui.center.aligned.container h1 {
   color: white;
