--- a/app/client/style.css
+++ b/app/client/style.css
@@ -1,9 +1,8 @@
-.landing-background {
+.all-page-background {
   background: url('/images/runner-background.jpg') no-repeat center center fixed;
   background-size: cover;
-  height: 50em;
+  padding-bottom: 2em;
   background-position: bottom center;
-
 }
 .profile-cover-mockup {
   background: url('https://www.setaswall.com/wp-content/uploads/2017/05/Sakura-Wallpaper-10-1920x1080-768x432.jpg') no-repeat center center fixed;
